Refactor about.html css

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,299 +1,136 @@
-{% extends 'base.html' %}
-
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 <div class="container">
   <section class="section-wrapper">
-  
-    <h2>
-    <style>
-      .bordered-text { 
-        border: 5px solid #478ac9;
-        border-radius: 10px;
-        background-color: #478ac9;
-        padding: 0px;
-      }
-  </style>
-  
-  <p class="bordered-text">BACKGROUND</p>
-    </h2>
-  
-    
+    <h2 class="bordered-text">BACKGROUND</h2>
+
     <div class="background-wrapper">
       <div class="background-1">
-        <img
-          class="u-image u-image-circle u-image-1"
-          src="/static/img/orangkatarak.png"
-          alt="katarak-contoh-1"
-        />
-        <style>
-          .bordered-text { 
-            border: 5px solid #478ac9;
-            border-radius: 10px;
-            background-color: #478ac9;
-            padding: 0px;
-          }
-      </style>
-      
-      <p class="bordered-text">
-        Gangguan penglihatan masih menjadi permasalahan utama di Indonesia. 
-        Sebagian besar gangguan penglihatan tersebut diakibatkan oleh katarak.
-        Plt. Dirjen Pencegahan dan Pengendalian Penyakit, dr. Maxi Rein Rondonuwu 
-        mengatakan berdasarkan World Report on Vision tahun 2019 
-        diperkirakan secara global terdapat kurang lebih 2,2 milyar penduduk mengalami 
-        gangguan penglihatan. Padahal, kondisi gangguan penglihatan yang dialami 1 milyar penduduk 
-        tersebut sebenarnya dapat dicegah.&nbsp;<br />Katarak menjadi 
-        salah satu penyebab terbanyak kebutaan di Indonesia. 
-        Dirjen Pencegahan dan Pengendalian Penyakit dr. Achmad Yurianto (2020) 
-        menyatakan bahwa katarak merupakan penyebab tertinggi kebutaan sekitar 81%. 
-        Menurut Aldiana sebagai perwakilan PERDAMI diperkirakan ada sekitar 1,3 juta penduduk
-        Indonesia yang buta karena katarak.
-      </p>
-
+        <img class="u-image u-image-circle u-image-1" src="/static/img/orangkatarak.png" alt="katarak-contoh-1" />
+        <p class="bordered-text-with-padding">
+          Gangguan penglihatan masih menjadi permasalahan utama di Indonesia. Sebagian besar gangguan penglihatan tersebut diakibatkan oleh katarak. Plt. Dirjen Pencegahan dan Pengendalian Penyakit, dr. Maxi Rein Rondonuwu mengatakan
+          berdasarkan World Report on Vision tahun 2019 diperkirakan secara global terdapat kurang lebih 2,2 milyar penduduk mengalami gangguan penglihatan. Padahal, kondisi gangguan penglihatan yang dialami 1 milyar penduduk tersebut
+          sebenarnya dapat dicegah.&nbsp;<br />Katarak menjadi salah satu penyebab terbanyak kebutaan di Indonesia. Dirjen Pencegahan dan Pengendalian Penyakit dr. Achmad Yurianto (2020) menyatakan bahwa katarak merupakan penyebab tertinggi
+          kebutaan sekitar 81%. Menurut Aldiana sebagai perwakilan PERDAMI diperkirakan ada sekitar 1,3 juta penduduk Indonesia yang buta karena katarak.
+        </p>
       </div>
-    
+
       <div class="background-2">
-        <style>
-          .bordered-text { 
-            border: 5px solid #478ac9;
-            border-radius: 10px;
-            background-color: #478ac9;
-            padding: 0px;
-          }
-      </style>
+        <p class="bordered-text-with-padding">
+          Pemeriksaan slit lamp untuk diagnosis penyakit katarak masih minim dan sulit diakses oleh masyarakat.&nbsp;Saat ini mulai bermunculan inovasi menggunakan Artificial Intelligence (AI) untuk membantu proses diagnosis beberapa
+          penyakit yang dapat diidentifikasi menggunakan citra digital.&nbsp;<br />Oleh karena itu, dilakukan pengembangan dengan diagnosis dini penyakit katarak berdasarkan citra digital untuk mengetahui stadium katarak, kemudian data diri
+          berupa usia, jenis pekerjaan, dan riwayat penyakit untuk mengetahui klasifikasi jenis katarak, serta pemberian rekomendasi sebagai tindak lanjut yang selanjutnya dapat dikonsultasikan kepada dokter spesialis mata.
+        </p>
 
-      <p class="bordered-text">
-        Pemeriksaan slit lamp untuk diagnosis penyakit katarak masih
-        minim dan sulit diakses oleh masyarakat.&nbsp;Saat ini mulai
-        bermunculan inovasi menggunakan Artificial Intelligence (AI)
-        untuk membantu proses diagnosis beberapa penyakit yang dapat
-        diidentifikasi menggunakan citra digital.&nbsp;<br />Oleh karena
-        itu, dilakukan pengembangan dengan diagnosis dini penyakit
-        katarak berdasarkan citra digital untuk mengetahui stadium
-        katarak, kemudian data diri berupa usia, jenis pekerjaan, dan
-        riwayat penyakit untuk mengetahui klasifikasi jenis katarak,
-        serta pemberian rekomendasi sebagai tindak lanjut yang
-        selanjutnya dapat dikonsultasikan kepada dokter spesialis mata.
-      </p>
-
-        <img
-          class="u-image u-image-circle u-image-2"
-          src="/static/img/pemeriksaan-dan-konsultasi-mata-0-alodokter.jpeg"
-          alt="periksa-katarak"
-        />
+        <img class="u-image u-image-circle u-image-2" src="/static/img/pemeriksaan-dan-konsultasi-mata-0-alodokter.jpeg" alt="periksa-katarak" />
       </div>
     </div>
-  
   </section>
-  
+
   <section class="section-wrapper">
-    <h2>
-      <style>
-        .bordered-text { 
-          border: 5px solid #478ac9;
-          border-radius: 10px;
-          background-color: #478ac9;
-          padding: 0px;
-        }
-    </style>
-    
-    <p class="bordered-text">KATARAK</p>
-      </h2>
-    
-      <img
-        class="u-align-center u-image u-image-default u-image-1 centered-image"
-        src="/static/img/orgkatarak.jpeg"
-        alt="katarak-contoh-2"
-      />
+    <h2 class="bordered-text">KATARAK</h2>
 
-          <p>Katarak berasal dari bahasa Yunani, yaitu katarassein, terdiri
-            dari dua kata yaitu kata artinya “turun” dan arassein artinya
-            “serangan air”. Katarassein bermakna sesuatu yang turun
-            seperti air terjun menghalangi indra penglihatan.
-          </p>
-          <p>Katarak dalam bahasa Latin yaitu cataracta yang artinya
-            waterfall, dimana penglihatan menjadi kabur disebabkan aliran
-            cairan keruh yang turun dan terisi di depan lensa, penderita
-            melihat bagaikan dari balik air terjun.
-          </p>
-          <p>Katarak diartikan sebagai suatu penyakit yang menyerang indra
-            penglihatan dengan hilangnya transparansi pada lensa sehingga
-            penderita mengalami penurunan kualitas penglihatan.
-          </p>
+    <img class="u-align-center u-image u-image-default u-image-1 centered-image" src="/static/img/orgkatarak.jpeg" alt="katarak-contoh-2" />
 
+    <div class="katarak-description">
+      <p class="bordered-text-with-padding katarak-desc-card">
+        Katarak berasal dari bahasa Yunani, yaitu katarassein, terdiri dari dua kata yaitu kata artinya “turun” dan arassein artinya “serangan air”. Katarassein bermakna sesuatu yang turun seperti air terjun menghalangi indra penglihatan.
+      </p>
+      <p class="bordered-text-with-padding katarak-desc-card">
+        Katarak dalam bahasa Latin yaitu cataracta yang artinya waterfall, dimana penglihatan menjadi kabur disebabkan aliran cairan keruh yang turun dan terisi di depan lensa, penderita melihat bagaikan dari balik air terjun.
+      </p>
+      <p class="bordered-text-with-padding katarak-desc-card">
+        Katarak diartikan sebagai suatu penyakit yang menyerang indra penglihatan dengan hilangnya transparansi pada lensa sehingga penderita mengalami penurunan kualitas penglihatan.
+      </p>
+    </div>
   </section>
-  
+
   <section class="section-wrapper">
+    <h2 class="bordered-text">KLASIFIKASI KATARAK</h2>
 
-    <h2>
-      <style>
-        .bordered-text { 
-          border: 5px solid #478ac9;
-          border-radius: 10px;
-          background-color: #478ac9;
-          padding: 0px;
-        }
-    </style>
-    
-    <p class="bordered-text">KLASIFIKASI KATARAK</p>
-      </h2>
+    <p class="klasifikasi-katarak-subheader">Berdasarkan Buku Ajar Ilmu Kesehatan Mata (2013), terdapat 4 klasifikasi katarak berdasarkan penyebabnya:</p>
 
-      <p class="klasifikasi-katarak-subheader">Berdasarkan Buku Ajar Ilmu Kesehatan Mata (2013), terdapat 4 klasifikasi katarak berdasarkan penyebabnya:</p>
-  
-      <div class="cards-wrapper">
-        <div class="card-wrapper">
-          <h3>KATARAK KONGENITAL</h3>
-          
-          <img
-            class="u-image u-image-round u-radius-10 u-image-1"
-            src="/static/img/katarak-kongenital.jpeg"
-            alt="katarak-kongenital"
-          />
-          <br /><p>Katarak yang umum dialami oleh bayi baru lahir dan bayi umur &lt;
-              1 tahun dengan bercak putih pada pupil.
-          </p>
-          
-          <p>Salah satu penyebab katarak kongenital adalah ibu hamil dengan riwayat penyakit diabetes melitus,
-              toksoplasmosis, galaktosemia, dan rubela.
-          </p>
-        </div>
-    
-        <div class="card-wrapper">
-          <h3>KATARAK SENILIS</h3>
-    
-          <img
-            class="u-image u-image-round u-radius-10 u-image-1"
-            src="/static/img/senilis.jpeg"
-            alt="katarak-senilis"
-          />
+    <div class="cards-wrapper">
+      <div class="card-wrapper">
+        <h3>KATARAK KONGENITAL</h3>
 
-          <br /><p>Katarak yang disebabkan oleh proses degeneratif (penuaan).</p>
-          
-          <p>Umumnya diderita oleh orang berusia diatas 40 tahun. Lensa
-              mengeruh dan menebal, serta menurunnya daya akomodasi.
-          </p>
-        </div>
-    
-        <div class="card-wrapper">
-          <h3>KATARAK KOMPLIKATA</h3>
-    
-          <img
-            class="u-image u-image-round u-radius-10 u-image-1"
-            src="/static/img/uveitis.jpeg"
-            alt="katarak-komplikata"
-          />
-          <br /><p>Katarak yang disebabkan karena penebalan kapsul lensa akibat
-              perubahan membran permeabilitas.
-          </p>
-          
-          <p>Disebabkan juga kelainan kongenital dan herediter, miopia,
-              distrofi vitreoretinal, serta sindrom tertentu seperti kelainan
-              kulit, tulang, dan kromosom, serta uveitis anterior.
-          </p>
-        </div>
-    
-        <div class="card-wrapper">
-          <h3>KATARAK TRAUMATIKA</h3>
-    
-          <img
-            class="u-image u-image-round u-radius-10 u-image-1"
-            src="/static/img/welder.jpeg"
-            alt="katarak-traumatika"
-          />
-          <br /><p>Katarak yang disebabkan oleh luka memar/ trauma tumpul maupun
-              tajam yang menimbulkan cidera pada lensa mata.
-          </p>
-          
-          <p>Penyebab dari trauma ini pada umumnya yaitu radiasi sinar X, infra
-              merah, ultra violet, radioaktif, paparan bahan kimia
-              dan terkena benda asing.
-          </p>
+        <div class="card" style="width: 20rem; height: 30rem; background-color: #478ac9; color: white">
+          <img src="/static/img/katarak-kongenital.jpeg" class="card-img-top" alt="..." style="padding: 1em" />
+          <div class="card-body">
+            <p class="card-text">Katarak yang umum dialami oleh bayi baru lahir dan bayi umur &lt; 1 tahun dengan bercak putih pada pupil.</p>
+            <p class="card-text">Salah satu penyebab katarak kongenital adalah ibu hamil dengan riwayat penyakit diabetes melitus, toksoplasmosis, galaktosemia, dan rubela.</p>
+          </div>
         </div>
       </div>
 
+      <div class="card-wrapper">
+        <h3>KATARAK SENILIS</h3>
+
+        <div class="card" style="width: 20rem; height: 30rem; background-color: #478ac9; color: white">
+          <img src="/static/img/senilis.jpeg" class="card-img-top" alt="..." style="padding: 1em" />
+          <div class="card-body">
+            <p class="card-text">Katarak yang disebabkan oleh proses degeneratif (penuaan).</p>
+            <p class="card-text">Umumnya diderita oleh orang berusia diatas 40 tahun. Lensa mengeruh dan menebal, serta menurunnya daya akomodasi.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card-wrapper">
+        <h3>KATARAK KOMPLIKATA</h3>
+
+        <div class="card" style="width: 20rem; height: 30rem; background-color: #478ac9; color: white">
+          <img src="/static/img/uveitis.jpeg" class="card-img-top" alt="..." style="padding: 1em" />
+          <div class="card-body">
+            <p class="card-text">Katarak yang disebabkan karena penebalan kapsul lensa akibat perubahan membran permeabilitas.</p>
+            <p class="card-text">Disebabkan juga kelainan kongenital dan herediter, miopia, distrofi vitreoretinal, serta sindrom tertentu seperti kelainan kulit, tulang, dan kromosom, serta uveitis anterior.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card-wrapper">
+        <h3>KATARAK TRAUMATIKA</h3>
+
+        <div class="card" style="width: 20rem; height: 30rem; background-color: #478ac9; color: white">
+          <img src="/static/img/welder.jpeg" class="card-img-top" alt="..." style="padding: 1em" />
+          <div class="card-body">
+            <p class="card-text">Katarak yang disebabkan oleh luka memar/ trauma tumpul maupun tajam yang menimbulkan cidera pada lensa mata.</p>
+            <p class="card-text">Penyebab dari trauma ini pada umumnya yaitu radiasi sinar X, infra merah, ultra violet, radioaktif, paparan bahan kimia dan terkena benda asing.</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
-  
+
   <section class="section-wrapper">
-      <h2>
-        <style>
-        .bordered-text { 
-          border: 5px solid #478ac9;
-          border-radius: 10px;
-          background-color: #478ac9;
-          padding: 0px;
-        }
-        </style>
-    
-    <p class="bordered-text">TUTORIAL</p>
-      </h2>
+    <h2 class="bordered-text">TUTORIAL</h2>
 
+    <p class="bordered-text-inline">LANGKAH 1 : Masukkan nama lengkap dan Alamat E-Mail Anda yang masih aktif.</p>
+    <br />
+    <p class="bordered-text-inline">CONTOH PENGISIAN :</p>
 
-      <style>
-        .bordered-text-1 { 
-          border: 5px solid #478ac9;
-          display: inline-block;
-          border-radius: 10px;
-          background-color: #478ac9;
-          padding: 0px;
-        }
-    </style>
-      <p class="bordered-text-1"> 
-        LANGKAH 1 : Masukkan nama lengkap dan Alamat E-Mail Anda yang masih aktif.
-      </p>
-      <br />
-      <p class="bordered-text-1"> CONTOH PENGISIAN :</p>
+    <img class="u-expanded-width-xs u-image u-image-contain u-image-default u-image-1 centered-image" src="/static/img/try1.PNG" alt="langkah-1" />
+    <p class="bordered-text-inline">LANGKAH 2 : Masukkan gambar mata dengan kualitas terbaik yang Anda miliki</p>
+    <p class="bordered-text-inline">
+      Anjuran ketika pengambilan gambar:<br />
+      1. Anda dapat mengambil gambar mata Anda di tempat dengan pencahayaan yang terang. Sebaiknya di luar ruangan (outdoor).<br />
+      2. Anda tidak diperkenankan untuk menggunakan kacamata atau penutup mata ketika mengambil gambar. Hal ini bertujuan agar gambar lensa mata tidak terhalang oleh apapun dan terlihat jelas.<br />
+      3. Gunakan kamera belakang agar kualitas gambar lebih baik dan minta bantuan orang lain untuk mengambil gambar.<br />
+      4. Ketika pengambilan gambar, mata dapat menghadap lurus pada lensa kamera, agar gambar yang dihasilkan tepat.<br />
+      5. Jarak kamera dengan mata kurang lebih 5 cm. Tetapi jarak ini dapat disesuaikan dengan kondisi kamera.<br />
+      6. Gambar tidak perlu diedit atau diberi filter agar hasil lebih akurat.<br />
+    </p>
+    <br />
+    <p class="bordered-text-inline">CONTOH HASIL GAMBAR :</p>
 
-      <img
-        class="u-expanded-width-xs u-image u-image-contain u-image-default u-image-1 centered-image"
-        src="/static/img/try1.PNG"
-        alt="langkah-1"
-      />
-      <p class="bordered-text-1"> 
-        LANGKAH 2 : Masukkan gambar mata dengan kualitas terbaik yang Anda miliki
-      </p>
-      <p class="bordered-text-1"> 
-          Anjuran ketika pengambilan gambar:<br />
-          1. Anda dapat mengambil gambar mata Anda di tempat dengan pencahayaan yang
-          terang. Sebaiknya di luar ruangan (outdoor).<br />
-          2. Anda tidak diperkenankan untuk menggunakan kacamata atau penutup mata ketika mengambil gambar. Hal ini
-          bertujuan agar gambar lensa mata tidak terhalang oleh apapun
-          dan terlihat jelas.<br />
-          3. Gunakan kamera belakang agar kualitas gambar lebih baik dan minta bantuan orang lain untuk
-          mengambil gambar.<br />
-          4. Ketika pengambilan gambar, mata dapat menghadap lurus pada lensa kamera, agar gambar yang
-          dihasilkan tepat.<br />
-          5. Jarak kamera dengan mata kurang lebih 5 cm. Tetapi jarak ini dapat disesuaikan dengan kondisi
-          kamera.<br />
-          6. Gambar tidak perlu diedit atau diberi filter agar hasil lebih akurat.<br />
-      </p>
-      <br />
-      <p class="bordered-text-1">
-      CONTOH HASIL GAMBAR :</p>
+    <img class="u-image u-image-round u-radius-10 u-image-1 centered-image" src="/static/img/IMMATURE18.jpg" alt="hasil-gambar" />
 
-    <img
-      class="u-image u-image-round u-radius-10 u-image-1 centered-image"
-      src="/static/img/IMMATURE18.jpg"
-      alt="hasil-gambar"
-    />
+    <p class="bordered-text-inline">
+      LANGKAH 3 : Pilihlah pilihan yang paling sesuai dengan kriteria Anda. Apabila kriteria Anda tidak tercantum pada pilihan yang diberikan, maka pilihlah button dengan deskripsi 'Tidak dari semua pilihan diatas'
+    </p>
+    <br />
+    <p class="bordered-text-inline">CONTOH PENGISIAN :</p>
 
-      <p class="bordered-text-1"> 
-        LANGKAH 3 : Pilihlah pilihan yang paling sesuai dengan kriteria Anda.
-        Apabila kriteria Anda tidak tercantum pada pilihan yang diberikan,
-        maka pilihlah button dengan deskripsi 'Tidak dari semua pilihan diatas'
-      </p>
-      <br />
-      <p class="bordered-text-1"> CONTOH PENGISIAN :</p>
-  
-      <img
-        class="u-image u-image-contain u-image-default u-image-2 centered-image"
-        src="/static/img/Screenshot96.png"
-        alt="langkah-2"
-      />
-      <p class="bordered-text-1"> 
-        Deskripsi Contoh Pengisian :<br />Farah berusia 20 Tahun, seorang mahasiswa,
-          memiliki kelainan penglihatan rabun jauh, dan tidak memiliki luka pada bagian mata<br />
-      </p>
-  
-
+    <img class="u-image u-image-contain u-image-default u-image-2 centered-image" src="/static/img/Screenshot96.png" alt="langkah-2" />
+    <p class="bordered-text-inline">Deskripsi Contoh Pengisian :<br />Farah berusia 20 Tahun, seorang mahasiswa, memiliki kelainan penglihatan rabun jauh, dan tidak memiliki luka pada bagian mata<br /></p>
   </section>
 </div>
 {% endblock %}
