--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,213 +1,251 @@
 /* styles.css */
 
 body {
-    background-color: #e9f2fa !important;
-    color: rgb(77, 77, 77);
-    padding: 0;
-    margin: 0;
-    text-decoration: none;
-    font-family: 'Lato', sans-serif;
+  background-color: #e9f2fa !important;
+  color: rgb(77, 77, 77);
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  font-family: "Lato", sans-serif;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 /* base.html styling */
 
 .navbar {
-    background-color: #e9f2fa;
-    padding: 0;
-    margin: 0;
+  background-color: #e9f2fa;
+  padding: 0;
+  margin: 0;
 }
 
 .nav-item .nav-link {
-    font-size: 1.25rem;
-    font-weight: 700;
+  font-size: 1.25rem;
+  font-weight: 700;
 }
 
 nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #e9f2fa;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #e9f2fa;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 nav li a:hover {
-    color: #2b5075;
+  color: #2b5075;
 }
 
 .hero {
-    width: 100%;
-    /* height: 100vh; */
-    height: calc(100vh - var(--navbar-height));
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    color: #ffffff;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url('/static/img/SLITLAMP1.jpeg');
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+  width: 100%;
+  /* height: 100vh; */
+  height: calc(100vh - var(--navbar-height));
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: #ffffff;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/img/SLITLAMP1.jpeg");
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .button {
-    display: inline-block;
-    background-color: #e9f2fa02;
-    border: 5px solid;
-    border-radius: 0.25rem;
-    color: #e9f2fa;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    font-size: 20px;
-    margin: 4px 2px;
-    cursor: pointer;
+  display: inline-block;
+  background-color: #e9f2fa02;
+  border: 5px solid;
+  border-radius: 0.25rem;
+  color: #e9f2fa;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 20px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
 
 .logo {
-    width: 9rem;
+  width: 9rem;
 }
 
 /* about.html styling */
 
 .section-wrapper {
-    margin-bottom: 2em;
+  margin-bottom: 2em;
 }
 section h1 {
-    font-size: 6rem;
-    letter-spacing: 9px;
-    font-weight: 700;
-    color: #adcce9;
-    text-shadow: 2px 2px 8px rgb(88, 87, 87);
-    --animation-custom_in-scale: 0.3;
-    font-family: "Open Sans", sans-serif;
-    margin: 40px 0 0;
+  font-size: 6rem;
+  letter-spacing: 9px;
+  font-weight: 700;
+  color: #adcce9;
+  text-shadow: 2px 2px 8px rgb(88, 87, 87);
+  --animation-custom_in-scale: 0.3;
+  font-family: "Open Sans", sans-serif;
+  margin: 40px 0 0;
 }
 
 section h2 {
-    text-align: center;
+  text-align: center;
 }
 
 section h4 {
-    font-size: 1.5rem;
-    color: #e9f2fa;
-    letter-spacing: 2px;
-    --animation-custom_in-translate_x: 0px;
-    --animation-custom_in-translate_y: 0px;
-    --animation-custom_in-opacity: 0;
-    --animation-custom_in-rotate: 0deg;
-    --animation-custom_in-scale: 0.3;
-    margin: 40px 0 0;
-  }
-
-.background-1, .background-2 {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
+  font-size: 1.5rem;
+  color: #e9f2fa;
+  letter-spacing: 2px;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 0.3;
+  margin: 40px 0 0;
 }
 
-.background-1, .background-2 {
-    display: flex;
-    flex-direction: row;
-    gap: 1em;
+.bordered-text {
+  border: 5px solid #478ac9;
+  border-radius: 10px;
+  background-color: #478ac9;
+  padding: 0px;
+}
+
+.bordered-text-with-padding {
+  border: 5px solid #478ac9;
+  border-radius: 10px;
+  background-color: #478ac9;
+  padding: 1em;
+  color: white;
+}
+
+.bordered-text-inline {
+  border: 5px solid #478ac9;
+  display: inline-block;
+  border-radius: 10px;
+  background-color: #478ac9;
+  padding: 0.5em;
+  color: white;
+}
+
+.background-1,
+.background-2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+}
+
+.background-1,
+.background-2 {
+  display: flex;
+  flex-direction: row;
+  gap: 1em;
 }
 
 .background-wrapper {
-    display: flex;
-    flex-direction: column;
-    gap: 2.5em;
-    margin-top: 2em;
+  display: flex;
+  flex-direction: column;
+  gap: 2.5em;
+  margin-top: 2em;
 }
 
-.u-image-1, .u-image-2, .u-images-3 {
-    grid-area: image;  
-    border-radius: 10px; 
+.u-image-1,
+.u-image-2,
+.u-images-3 {
+  grid-area: image;
+  border-radius: 10px;
 }
 
 .u-image-1 {
-    width: 20em;
+  width: 20em;
 }
 
 .u-image-2 {
-    width: 25em;
+  width: 25em;
 }
 
 .u-image-3 {
-    width:10em; 
+  width: 10em;
 }
 
 .description {
-    grid-area: description;
+  grid-area: description;
 }
 
 .centered-image {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 30%;
-    margin-bottom: 1.5em;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+  margin-bottom: 1.5em;
+}
+
+.katarak-description {
+  display: flex;
+  flex-direction: row;
+  gap: 2em;
+  justify-content: space-evenly;
+}
+
+.katarak-desc-card {
+  width: 33.3%;
 }
 
 .klasifikasi-katarak-subheader {
-    text-align: center;
+  text-align: center;
 }
 
 .cards-wrapper {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 2em;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 2em;
 }
 
 .card-wrapper:nth-child(1) {
-    grid-area: 1 / 1 / 2 / 2; /* Row 1, Column 1 */
+  grid-area: 1 / 1 / 2 / 2; /* Row 1, Column 1 */
 }
-  
+
 .card-wrapper:nth-child(2) {
-    grid-area: 1 / 2 / 2 / 3; /* Row 1, Column 2 */
+  grid-area: 1 / 2 / 2 / 3; /* Row 1, Column 2 */
 }
 
 .card-wrapper:nth-child(3) {
-    grid-area: 2 / 1 / 3 / 2; /* Row 2, Column 1 */
+  grid-area: 2 / 1 / 3 / 2; /* Row 2, Column 1 */
 }
 
 .card-wrapper:nth-child(4) {
-    grid-area: 2 / 2 / 3 / 3; /* Row 2, Column 2 */
+  grid-area: 2 / 2 / 3 / 3; /* Row 2, Column 2 */
 }
 
 .card-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
 .card-wrapper img {
-    height: 15em;
+  height: 15em;
 }
 
-.card-wrapper p {
-    text-align: center;
-    width: 50%;
-}
+/* .card-wrapper p {
+  text-align: center;
+  width: 50%;
+} */
 
 .card-wrapper h3 {
-    text-align: center;
+  text-align: center;
 }
 
 .diagnosis-dini-sebagai-screening-awal-penyakit-katarak-subheader {
-    text-align: center;
+  text-align: center;
 }
 
-.bordered-text, .bordered-text-1 {
-    color: #ffffff
+.bordered-text,
+.bordered-text-1 {
+  color: #ffffff;
 }
-
-
